# Gerald

Software-development-for-algorithmic-problems-master/: README.md
Software-development-for-algorithmic-problems-master/Project/: Makefile  Points_gnu_commands.txt  QtExample.pro  Read_Me.odt  example.txt  example2.txt  example3.txt  example4.txt  example5.txt  example6.txt  ploting_form.txt  points2.txt  qtgnuplotlib-example.cpp  solutions.txt  test_point1.txt  test_point2.txt  visualization.cpp  visualization.h  visualization.ui
Software-development-for-algorithmic-problems-master/Solve/: ReadMe  Solve.pro  solve.cpp  solve.h
Software-development-for-algorithmic-problems-master/Solve/project_2.6/: Handler.cpp  Handler.h  main.cpp  (+1 more)
Software-development-for-algorithmic-problems-master/Solve/project_2.6/libTest/: CMakeLists.txt  TestMain.cpp  example.txt  makefile
Software-development-for-algorithmic-problems-master/Solve/project_2.6/libTest/TestLibCurves/: TestInterpolation.cpp  TestInterpolation.h
Software-development-for-algorithmic-problems-master/Solve/project_2.6/libTest/TestLibMatrix/: TestPinakas_syntelestwn.cpp  TestPinakas_syntelestwn.h  TestPolywnymo_mhtrwwn.cpp  TestPolywnymo_mhtrwwn.h  TestSylvester.cpp  TestSylvester.h  testMatrix.cpp  testMatrix.h  testPinakas_polywnymou_mhtrwwn.cpp  testPinakas_polywnymou_mhtrwwn.h
Software-development-for-algorithmic-problems-master/Solve/project_2.6/libTest/TestLibSolver/: TestCompanion.cpp  TestCompanion.h  TestGeneralProblem.cpp  TestGeneralProblem.h  TestKappa.cpp  TestKappa.h  TestZed.cpp  TestZed.h
(+22 files in other folders)
